// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Supplicate (MCV) 3-pool dual-orbit — deltas + automatic flip uses NEG set first, flips to POS after each mcvSupplication; shows per-pool & treasury deltas 1`] = `
Object {
  "note": "NEG-first under independent 3-hop model (per-hop fees); run #1 funds ASSET for NEG, run #2 funds USDC for POS.",
  "orbitRun1": Object {
    "activeOrbit": Array [
      "POOL#0",
      "POOL#1",
      "POOL#2",
    ],
    "poolDeltas": Array [
      Object {
        "deltaA": "1001000000000000000",
        "deltaU": "-990089207037554083",
        "pool": "POOL#0",
      },
      Object {
        "deltaA": "1001000000000000000",
        "deltaU": "-990089207037554083",
        "pool": "POOL#1",
      },
      Object {
        "deltaA": "1001000000000000000",
        "deltaU": "-990089207037554083",
        "pool": "POOL#2",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#3",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#4",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#5",
      },
    ],
    "treasuryDelta": Object {
      "deltaA": "600000000000000",
      "deltaU": "0",
    },
    "usingNegBefore": true,
  },
  "orbitRun2": Object {
    "activeOrbit": Array [
      "POOL#3",
      "POOL#4",
      "POOL#5",
    ],
    "poolDeltas": Array [
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#0",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#1",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#2",
      },
      Object {
        "deltaA": "-990089207037554083",
        "deltaU": "1001000000000000000",
        "pool": "POOL#3",
      },
      Object {
        "deltaA": "-990089207037554083",
        "deltaU": "1001000000000000000",
        "pool": "POOL#4",
      },
      Object {
        "deltaA": "-990089207037554083",
        "deltaU": "1001000000000000000",
        "pool": "POOL#5",
      },
    ],
    "treasuryDelta": Object {
      "deltaA": "0",
      "deltaU": "600000000000000",
    },
    "usingNegBefore": false,
  },
  "role": "MCV",
  "startPool": "POOL#0",
}
`;

exports[`Supplicate (MCV) 3-pool dual-orbit — deltas + automatic flip uses POS set first, flips to NEG after each mcvSupplication; shows per-pool & treasury deltas 1`] = `
Object {
  "note": "POS-first mirror under independent 3-hop model (per-hop fees); direction follows router cursor (USDC-in first), then flips.",
  "orbitRun1": Object {
    "activeOrbit": Array [
      "POOL#6",
      "POOL#7",
      "POOL#8",
    ],
    "poolDeltas": Array [
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#9",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#10",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#11",
      },
      Object {
        "deltaA": "-990089207037554083",
        "deltaU": "1001000000000000000",
        "pool": "POOL#6",
      },
      Object {
        "deltaA": "-990089207037554083",
        "deltaU": "1001000000000000000",
        "pool": "POOL#7",
      },
      Object {
        "deltaA": "-990089207037554083",
        "deltaU": "1001000000000000000",
        "pool": "POOL#8",
      },
    ],
    "treasuryDelta": Object {
      "deltaA": "0",
      "deltaU": "600000000000000",
    },
    "usingNegBefore": false,
  },
  "orbitRun2": Object {
    "activeOrbit": Array [
      "POOL#9",
      "POOL#10",
      "POOL#11",
    ],
    "poolDeltas": Array [
      Object {
        "deltaA": "1001000000000000000",
        "deltaU": "-990089207037554083",
        "pool": "POOL#9",
      },
      Object {
        "deltaA": "1001000000000000000",
        "deltaU": "-990089207037554083",
        "pool": "POOL#10",
      },
      Object {
        "deltaA": "1001000000000000000",
        "deltaU": "-990089207037554083",
        "pool": "POOL#11",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#6",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#7",
      },
      Object {
        "deltaA": "0",
        "deltaU": "0",
        "pool": "POOL#8",
      },
    ],
    "treasuryDelta": Object {
      "deltaA": "600000000000000",
      "deltaU": "0",
    },
    "usingNegBefore": true,
  },
  "role": "MCV",
  "startPool": "POOL#9",
}
`;

exports[`Supplicate (MCV) 3-pool orbit — liquidity snapshots (with deltas + hop proof) mcvSupplication orbit — snapshot pools & treasury, deltas, offsets, hop order 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "executed": true,
  "hopTrace": Array [
    Object {
      "amountIn": "1000000000000000000",
      "amountOut": "990089207037554083",
      "assetToUsdc": false,
      "pool": "0xca4211da53d1bbab819B03138302a21d6F6B7647",
      "tokenIn": "0x0E801D84Fa97b50751Dbf25036d067dCf18858bF",
      "tokenOut": "0x99bbA657f2BbC93c02D617f8bA121cB8Fc104Acf",
    },
    Object {
      "amountIn": "1000000000000000000",
      "amountOut": "990089207037554083",
      "assetToUsdc": false,
      "pool": "0xE7402c51ae0bd667ad57a99991af6C2b686cd4f1",
      "tokenIn": "0x0E801D84Fa97b50751Dbf25036d067dCf18858bF",
      "tokenOut": "0x99bbA657f2BbC93c02D617f8bA121cB8Fc104Acf",
    },
    Object {
      "amountIn": "1000000000000000000",
      "amountOut": "990089207037554083",
      "assetToUsdc": false,
      "pool": "0xED53ee55B63FCD7842D009481c6DC5Af66Ba2e1e",
      "tokenIn": "0x0E801D84Fa97b50751Dbf25036d067dCf18858bF",
      "tokenOut": "0x99bbA657f2BbC93c02D617f8bA121cB8Fc104Acf",
    },
  ],
  "note": "Independent 3-hop model: per-hop fee (12 bps) is charged each hop and donated to that hop’s input reserve; treasury receives 2 bps per hop. Params sent as object for ethers v6.",
  "offsets": Array [
    -500,
    -500,
    -500,
  ],
  "orbitPools": Array [
    "0xca4211da53d1bbab819B03138302a21d6F6B7647",
    "0xE7402c51ae0bd667ad57a99991af6C2b686cd4f1",
    "0xED53ee55B63FCD7842D009481c6DC5Af66Ba2e1e",
  ],
  "pools": Object {
    "after": Array [
      Object {
        "a": "99009910792962445917",
        "pool": "0xca4211da53d1bbab819B03138302a21d6F6B7647",
        "sqrtPriceX96": "75266754388551120713866752819",
        "u": "101001000000000000000",
      },
      Object {
        "a": "99009910792962445917",
        "pool": "0xE7402c51ae0bd667ad57a99991af6C2b686cd4f1",
        "sqrtPriceX96": "75266754388551120713866752819",
        "u": "101001000000000000000",
      },
      Object {
        "a": "99009910792962445917",
        "pool": "0xED53ee55B63FCD7842D009481c6DC5Af66Ba2e1e",
        "sqrtPriceX96": "75266754388551120713866752819",
        "u": "101001000000000000000",
      },
    ],
    "before": Array [
      Object {
        "a": "100000000000000000000",
        "pool": "0xca4211da53d1bbab819B03138302a21d6F6B7647",
        "sqrtPriceX96": "75266754388551120713866752819",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xE7402c51ae0bd667ad57a99991af6C2b686cd4f1",
        "sqrtPriceX96": "75266754388551120713866752819",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xED53ee55B63FCD7842D009481c6DC5Af66Ba2e1e",
        "sqrtPriceX96": "75266754388551120713866752819",
        "u": "100000000000000000000",
      },
    ],
    "delta": Array [
      Object {
        "a": "-990089207037554083",
        "u": "1001000000000000000",
      },
      Object {
        "a": "-990089207037554083",
        "u": "1001000000000000000",
      },
      Object {
        "a": "-990089207037554083",
        "u": "1001000000000000000",
      },
    ],
  },
  "revertReason": null,
  "role": "MCV",
  "startPool": "0xca4211da53d1bbab819B03138302a21d6F6B7647",
  "treasury": Object {
    "after": Object {
      "a": "400000000000000000000",
      "u": "400000600000000000000",
    },
    "before": Object {
      "a": "400000000000000000000",
      "u": "400000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "600000000000000",
    },
  },
}
`;

exports[`Supplicate (MCV) Bypass guard via direct token movement (MCV path) ERC20.transfer / transferFrom to pool must NOT mutate reserves 1`] = `
Object {
  "note": "Direct token moves cannot spoof LPP reserves (MCV path). Use donateToReserves for legit credits.",
  "reservesAfter": Object {
    "a": "100000000000000000000",
    "u": "100000000000000000000",
  },
  "reservesBefore": Object {
    "a": "100000000000000000000",
    "u": "100000000000000000000",
  },
  "role": "MCV",
}
`;

exports[`Supplicate (MCV) MCV executes single-pool rebalance — ASSET->USDC (fee-aware input) 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "callerBalances": Object {
    "after": Object {
      "a": "100000000000000000000000000",
      "u": "100000000990089207037554083",
    },
    "before": Object {
      "a": "100000001001200000000000000",
      "u": "100000000000000000000000000",
    },
  },
  "direction": "ASSET->USDC",
  "fees": Object {
    "basis": "input",
    "pools": "1000000000000000",
    "token": "ASSET",
    "total": "1200000000000000",
    "treasury": "200000000000000",
  },
  "quotes": Object {
    "expectedGross_afterDonation": "990089207037554083",
    "poolQuote_preFeeGross": "990099009900990099",
    "routerStatic_gross": "990089207037554083",
  },
  "reserves": Object {
    "after": Object {
      "a": "101001000000000000000",
      "u": "99009910792962445917",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "role": "MCV",
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "78443340812552907234366057129",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "75266754388551120713866752819",
      "before": "75266754388551120713866752819",
    },
  },
}
`;

exports[`Supplicate (MCV) MCV executes single-pool rebalance — USDC->ASSET (fee-aware input) 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "caller": Object {
    "after": Object {
      "a": "100000000990089207037554083",
      "u": "100000000000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000000000",
      "u": "100000001001200000000000000",
    },
  },
  "direction": "USDC->ASSET",
  "expectedGross_afterDonation": "990089207037554083",
  "fees": Object {
    "basis": "input",
    "pools": "1000000000000000",
    "token": "USDC",
    "total": "1200000000000000",
    "treasury": "200000000000000",
  },
  "poolQuote_preFeeGross": "990099009900990099",
  "reserves": Object {
    "after": Object {
      "a": "99009910792962445917",
      "u": "101001000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "role": "MCV",
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "80020836317850789811356659133",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "75266754388551120713866752819",
      "before": "75266754388551120713866752819",
    },
  },
}
`;
